# opentelemetry-otlp-capnp

./: .gitignore  Cargo.toml  README.md  justfile  notes.md  trace2.rs
.github/workflows/: ci.yaml
docker/: README.md  benchmark-collector-config.yaml  docker-compose.yaml
examples/basic-capnp/src/: main.rs
opentelemetry-capnp/: Cargo.toml  README.md  build.rs
opentelemetry-capnp/src/: capnp.rs  lib.rs
opentelemetry-capnp/src/transform/: common.rs  trace.rs
opentelemetry-capnp/tests/: capnp_build.rs
opentelemetry-otlp-capnp/: Cargo.toml  README.md
opentelemetry-otlp-capnp/benches/: basic_bulk_span_export.rs  bulk-span-export.rs
opentelemetry-otlp-capnp/examples/basic-capnp/: Cargo.toml  README.md
opentelemetry-otlp-capnp/examples/basic-capnp/src/: main.rs
opentelemetry-otlp-capnp/examples/basic-otlp/: Cargo.toml  README.md
opentelemetry-otlp-capnp/examples/basic-otlp-trace/: Cargo.toml  README.md
opentelemetry-otlp-capnp/examples/basic-otlp-trace/src/: main.rs
opentelemetry-otlp-capnp/examples/bulk-capnp/: Cargo.toml  README.md
opentelemetry-otlp-capnp/examples/bulk-capnp/src/: app.rs  lib.rs  main.rs  receiver.rs
opentelemetry-otlp-capnp/examples/profile-exporter/: Cargo.toml
opentelemetry-otlp-capnp/examples/profile-exporter/src/: main.rs
opentelemetry-otlp-capnp/examples/subscriber/: Cargo.toml  README.md
opentelemetry-otlp-capnp/examples/subscriber/src/: lib.rs  main.rs
opentelemetry-otlp-capnp/src/: lib.rs  receiver.rs  retry.rs  span.rs
opentelemetry-otlp-capnp/src/exporter/: mod.rs
opentelemetry-otlp-capnp/src/exporter/capnp/: mod.rs  trace.rs
opentelemetry-otlp-capnp/utilities/: Cargo.toml
opentelemetry-otlp-capnp/utilities/src/: capnp.rs  lib.rs  otlp.rs
opentelemetry-otlp-capnp/utilities/src/capnp/: mod.rs  receiver.rs  span.rs
schema/opentelemetry/capnp/collector/trace/v1/: trace_service.capnp
schema/opentelemetry/capnp/common/v1/: common.capnp
schema/opentelemetry/capnp/resource/v1/: resource.capnp
schema/opentelemetry/capnp/trace/v1/: trace.capnp
src/: span.rs
src/exporter/capnp/: mod.rs  trace.rs
