[workspace]
members = [
    "opentelemetry-otlp-capnp",
    "opentelemetry-capnp",
    "opentelemetry-otlp-capnp/examples/basic-otlp",
    "opentelemetry-otlp-capnp/examples/basic-otlp-trace",
    "opentelemetry-otlp-capnp/examples/basic-capnp",
]
resolver = "2"

[workspace.dependencies]
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
thiserror = "2"
tokio = {version = "1", features = ["sync", "rt"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3"
opentelemetry-capnp = { path = "opentelemetry-capnp", version = "0.1"}
capnp = "0.23"
capnp-rpc = "0.23"
