[package]
name = "basic-capnp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81.0"
publish = false
autobenches = false

[[bin]]
name = "basic-capnp"
path = "src/main.rs"
bench = false

[dependencies]
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp-capnp = { workspace = true }

tokio = { version = "1", features = ["full"] }
opentelemetry-appender-tracing = { version = "0.31.1", default-features = false }
tracing = { version = ">=0.1.40", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry", "std", "fmt"] }
